--- a/00-keyboard.conf
+++ b/00-keyboard.conf
@@ -2,5 +2,6 @@ Section "InputClass"
 	Identifier "system-keyboard"
 	MatchIsKeyboard "on"
 	Option "XkbOptions" "caps:escape"
+	Option "AutoRepeat" "150 50"  # delay (ms) and rate (Hz)
 EndSection
 
