--- a/30-touchpad.conf
+++ b/30-touchpad.conf
@@ -3,4 +3,5 @@ Section "InputClass"
     Driver "libinput"
 	Option "MatchIsTouchpad" "on"
 	Option "ClickMethod" "clickfinger"
+	Option "AccelSpeed" "0.5"
 EndSection
