--- a/alacritty.toml
+++ b/alacritty.toml
@@ -1,10 +1,4 @@
-import = ["~/.cache/wal/alacritty.toml"]
-
-live_config_reload = true
-
 [window]
-padding = { x = 10, y = 10 }
-dynamic_padding = true
 opacity = 0.9
 decorations_theme_variant = "dark"
 
@@ -13,10 +7,10 @@ history = 100000
 multiplier = 5
 
 [font]
-normal = { family = "FiraCode Nerd Font Mono", style = "Regular" }
-bold = { family = "FiraCode Nerd Font Mono", style = "Bold" }
-italic = { family = "FiraCode Nerd Font Mono", style = "Italic" }
-size = 13.0
+normal = { family = "Fira Code", style = "Regular" }
+bold = { family = "Fira Code", style = "Bold" }
+italic = { family = "Fira Code", style = "Italic" }
+size = 12.5
 
 [mouse]
 bindings = [
