--- a/30-touchpad.conf
+++ b/30-touchpad.conf
@@ -1,7 +1,9 @@
 Section "InputClass"
-    Identifier "devname"
+    Identifier "libinput touchpad catchall"
+    MatchIsTouchpad "on"
     Driver "libinput"
-	Option "MatchIsTouchpad" "on"
-	Option "ClickMethod" "clickfinger"
-	Option "AccelSpeed" "0.5"
+    Option "Tapping" "on"
+    Option "ClickMethod" "clickfinger"
+    Option "AccelProfile" "flat"
+    Option "AccelSpeed" "0.7"
 EndSection
