--- a/alacritty.toml
+++ b/alacritty.toml
@@ -1,5 +1,5 @@
 [window]
-opacity = 0.9
+opacity = 0.8
 decorations_theme_variant = "dark"
 
 [scrolling]
@@ -7,10 +7,10 @@ history = 100000
 multiplier = 5
 
 [font]
-normal = { family = "Fira Code", style = "Regular" }
-bold = { family = "Fira Code", style = "Bold" }
-italic = { family = "Fira Code", style = "Italic" }
-size = 12.5
+normal = { family = "Fira Code Retina", style = "Regular" }
+bold = { family = "Fira Code Retina", style = "Bold" }
+italic = { family = "Fira Code Retina", style = "Italic" }
+size = 11.5
 
 [mouse]
 bindings = [
